# ts2cpp

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
builtin/: CMakeLists.txt  gc.cc
example/: CMakeLists.txt  demo.ts  lib.ts  lib1.ts  lib2.ts  tsconfig.json
runtime/: CMakeLists.txt  console.cpp  gc.cpp
runtime/include/rt/: basic_type.hpp  builtin.hpp  console.hpp  function.hpp  gc.hpp  operator.hpp  type.hpp  union.hpp
transpiler/: code_emitter.ts  declaration.ts  declaration_extractor.ts  error.ts  index.ts  source_loader.ts
transpiler/IR/: base.ts  function.ts  type.ts
transpiler/adt/: array.ts
transpiler/emitter/: class_emitter.ts  config.ts  expression_generator.ts  function_emitter.ts  global_emitter.ts  identifier_generator.ts  indent.ts  index.ts  source_emitter.ts  statement_emitter.ts  symbol_helper.ts  type_generator.ts  type_helper.ts
transpiler/emitter/builtin/: gc.ts  runtime.ts  type.ts
transpiler/test/: basic.class.test.ts  basic.function.test.ts  basic.global.test.ts  basic.stmt.test.ts  basic.test.ts  basis.expr.test.ts  class.basic.test.ts  class.constructor.test.ts  expr.basis.test.ts  expr.fn.test.ts  expr.gc.test.ts  function.basic.test.ts  gc.expr.test.ts  global.basic.test.ts  helper.ts  import.test.ts  stmt.basic.test.ts  type.fn.test.ts  type.null.test.ts
